kubernetes/kyverno/cluster-policies/no-privileged-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privilege-escalation
  annotations:
    policies.kyverno.io/title: Disallow Privilege Escalation
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-allowPrivilegeEscalation
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: ["team-*", "app-*"]
      validate:
        message: "allowPrivilegeEscalation must be false."
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
