kubernetes/kyverno/cluster-policies/readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readonly-root-filesystem
  annotations:
    policies.kyverno.io/title: Require Read-Only Root Filesystem
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-readonly-rootfs
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: ["team-*", "app-*"]
      validate:
        message: "readOnlyRootFilesystem should be true."
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
